--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">    
   <head>      
     <title>PonziCoin</title>      
-    <meta http-equiv="refresh" content="0;URL='http://ponziblocks.com/ponzi_website/page/home.html'" />    
+    <meta http-equiv="refresh" content="0;URL='/ponzi_website/page/home.html'" />    
   </head>    
-  <body> 
-    <p>This page has moved to <a href="http://ponziblocks.com/ponzi_website/page/home.html">
-      page/home.html</a>.</p> 
+  <body style="background-color:black"> 
+    <p><a href="/ponzi_website/page/home.html">
+      </a></p> 
   </body>  
 </html>     
